fixed more layout bugs

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -44,7 +44,7 @@ h2{
   
   position: fixed;
   margin-top:200px;
-  width: 38%;
+  width: 35%;
   
   left:25px;
  }
