--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -11,13 +11,20 @@
 
 .text-box{
   width: 100%;
-  height:50%;
   border: none;
-  /* border-bottom: 3px solid; */
+  
+  border-bottom: 3px solid;
   background-color: #FFE192;  
-
-  line-height: 1rem;
+  resize: none;
+  /* line-height: 1rem; */
   font-family: "Source Sans Pro", sans-serif;
+
+  min-height: 8px;
+	max-height: 50vh;
+  width: 100%;
+  overflow: hidden;
+
+
 }
 
 .btn {
@@ -52,9 +59,8 @@ padding-right:10px;
   margin-bottom: 12px;
 }
 
-.text2long{
+.text2Red{
   color:red;
-  padding-right:10px;
   
 }
 
