--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -4,9 +4,11 @@
   border:solid 4px;
   width: 90%;
   margin:auto;
-  margin-top:10px;
+  margin-top:30px;
   background-color: #FFE192;
   padding:5px;
+  overflow-wrap: break-word;
+
 }
 
 
@@ -46,3 +48,14 @@ padding-right:10px;
 
 
 
+@media only screen and (min-width: 1024px) {
+  .tweet-container{
+    overflow-wrap: break-word;
+
+    max-width: 650px;
+  
+  }
+
+
+
+}
